aux_files/Posfixo/posfixo.output
Terminais não utilizados na gramática

   OR
   ABRE_PARENTESES
   FECHA_PARENTESES


Gramática

    0 $accept: expr $end

    1 expr: expr MAIS termo
    2     | expr MENOS termo
    3     | termo

    4 termo: termo ASTERISCO fator
    5      | termo DIV fator
    6      | fator

    7 fator: IDENT


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IDENT (258) 7
MAIS (259) 1
MENOS (260) 2
OR (261)
ASTERISCO (262) 4
DIV (263) 5
ABRE_PARENTESES (264)
FECHA_PARENTESES (265)


Não-terminais com as regras onde eles aparecem

$accept (11)
    à esquerda: 0
expr (12)
    à esquerda: 1 2 3, à direita: 0 1 2
termo (13)
    à esquerda: 4 5 6, à direita: 1 2 3 4 5
fator (14)
    à esquerda: 7, à direita: 4 5 6


estado 0

    0 $accept: . expr $end

    IDENT  deslocar, e ir ao estado 1

    expr   ir ao estado 2
    termo  ir ao estado 3
    fator  ir ao estado 4


estado 1

    7 fator: IDENT .

    $padrão  reduzir usando a regra 7 (fator)


estado 2

    0 $accept: expr . $end
    1 expr: expr . MAIS termo
    2     | expr . MENOS termo

    $end   deslocar, e ir ao estado 5
    MAIS   deslocar, e ir ao estado 6
    MENOS  deslocar, e ir ao estado 7


estado 3

    3 expr: termo .
    4 termo: termo . ASTERISCO fator
    5      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 8
    DIV        deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 3 (expr)


estado 4

    6 termo: fator .

    $padrão  reduzir usando a regra 6 (termo)


estado 5

    0 $accept: expr $end .

    $padrão  aceitar


estado 6

    1 expr: expr MAIS . termo

    IDENT  deslocar, e ir ao estado 1

    termo  ir ao estado 10
    fator  ir ao estado 4


estado 7

    2 expr: expr MENOS . termo

    IDENT  deslocar, e ir ao estado 1

    termo  ir ao estado 11
    fator  ir ao estado 4


estado 8

    4 termo: termo ASTERISCO . fator

    IDENT  deslocar, e ir ao estado 1

    fator  ir ao estado 12


estado 9

    5 termo: termo DIV . fator

    IDENT  deslocar, e ir ao estado 1

    fator  ir ao estado 13


estado 10

    1 expr: expr MAIS termo .
    4 termo: termo . ASTERISCO fator
    5      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 8
    DIV        deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 1 (expr)


estado 11

    2 expr: expr MENOS termo .
    4 termo: termo . ASTERISCO fator
    5      | termo . DIV fator

    ASTERISCO  deslocar, e ir ao estado 8
    DIV        deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 2 (expr)


estado 12

    4 termo: termo ASTERISCO fator .

    $padrão  reduzir usando a regra 4 (termo)


estado 13

    5 termo: termo DIV fator .

    $padrão  reduzir usando a regra 5 (termo)
